# waveshare-fan

./: .gitignore  CMakeLists.txt  README.md  main.c
WiringPi/gpio/: gpio
include/: DEV_Config.h  Waveshare_EMC2301.h
lib/: DEV_Config.c  Waveshare_EMC2301.c
ssd1306_i2c/: CMakeLists.txt  README.md  ssd1306_i2c.pc
ssd1306_i2c/cmake/ssd1306_i2c/: ssd1306_i2c-config.cmake
ssd1306_i2c/examples/: figure.c  scroll.c  word.c
ssd1306_i2c/include/: ssd1306_i2c.h
ssd1306_i2c/src/: ssd1306_i2c.c
